# bezalel

./: LICENSE  README.md  how_to_package.md  pyproject.toml  setup.cfg
src/bezalel/: __init__.py  bezalel.py  buffering_iterator.py
src/bezalel/impl/: CursorApiIterator.py  PaginatedApiIterator.py  dict_utils.py  normalize_dicts.py  normalize_with_prototype.py  prepare_job.py
tests/: conftest.py  mock_service.py  test_dict_utils.py  test_normalize_dicts.py  test_normalize_with_prototype.py  test_paginated_api.py
